--- a/css/mycss.css
+++ b/css/mycss.css
@@ -331,6 +331,7 @@ a {
         margin-bottom: 10px;
         padding-top: 1px;
         padding-bottom: 20px;
+        width: 93%;
     }
     /* Menu Admin */
     .menu {
@@ -350,6 +351,74 @@ a {
         text-decoration: none;
     }
 
+/* About */
+    .bout {
+        padding-top: 10px;
+    }
+    .bout2 {
+        box-sizing: border-box;
+        padding: 30px;
+        width: 93%;
+    }
+    .b {
+        font-family: 'Varela Round', sans-serif;
+        font-size: 30px;
+        text-shadow: 0 1px 1px rgba(0,0,7, 0.4);
+        text-align: center;
+    }
+    .garis {
+        width: auto;
+        border-bottom: 3px solid #1a1a1a;
+        width: 65%;
+        margin: auto;
+        margin-bottom: 40px;
+    }
+    .nama1 {
+        font-weight: 600;
+        text-align: center;
+        font-size: 22px;
+    }
+    .profil {
+        border-radius: 4px;
+        background-color: #ffffff;
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+        padding-top: 20px;
+        padding-left: 25px;
+        padding-right: 25px;
+        padding-bottom: 10px;
+        margin: 1rem;
+        text-align: center;
+    }
+    .profil img {
+        border: 1px solid black;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        width: 150px;
+        margin-bottom: 20px;
+        border-radius: 50%;
+    }
+    .profil p {
+        padding-bottom: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .profil a i {
+        padding-right: 5px;
+        padding-bottom: 10px;
+    }
+    .profil a i:hover::after {
+        content: '';
+        display: block;
+        border-bottom: 3px solid #999999;
+        width: 70%;
+        margin: auto;
+        padding-bottom: 5px;
+        margin-bottom: -8px;
+    }
+
+/* /About */
+
 /* --------Desktop.Version-------- */
 @media (min-width: 992px) {
     .home {
@@ -357,6 +426,18 @@ a {
     }
     .berita img {
         width: 180px;
+    }
+    .bout2 {
+        box-sizing: border-box;
+        padding: 30px;
+        width: 82.3%;
+    }
+    .garis {
+        width: 25%;
+        margin-bottom: 50px;
+    }
+    .padd {
+        width: 82.5%;
     }
     .f {
         font-size: 38px;
